don't show dates and station names on graph if not verbose